--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
@@ -21,9 +22,13 @@
     "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-pie": "^1.1.2",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
