--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gifted-charts": "^1.4.46",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pie": "^1.1.2",
     "react-native-pie-chart": "^3.0.2",
     "react-native-safe-area-context": "4.10.1",
