--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gifted-charts": "^1.4.46",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pie": "^1.1.2",
     "react-native-pie-chart": "^3.0.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-svg": "^15.8.0"
+    "react-native-svg": "^15.8.0",
+    "react-native-wheel-datepicker": "^2.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
