--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-sqlite": "^14.0.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-chart-kit": "^6.12.0",
